--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="container-one">
-        <img src="./img/thornberry-designs-high-resolution-logo.jpeg" alt="Thornberry Designs">
+        <img src="./img/thornberry-designs-high-resolution-logo.jpeg" alt="Thornberry Designs" class="logo">
      <ul class="right-links">
             <li>header link one</li>
             <li>header link two</li>
@@ -17,7 +17,7 @@
        <h1>This Website is awesome</h1>
        <p class="p1">This website has some subtext that goes here under the main title. It's smaller font and the colour is lower contrast</p>
        <button>Sign Up</button>
-       <img src="./img/pexels-picjumbo-com-55570-196644.jpg" alt="Web Design">
+       <img src="./img/pexels-picjumbo-com-55570-196644.jpg" alt="Web Design" class="img-1">
    
     </div>
 
