--- a/index.html
+++ b/index.html
@@ -1,29 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8"> 
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-
-   <header class="header-main"> 
-        <div class="header-main-logo"></div>
-        <nav class="header-main-nav"></nav>
-    </header>
-
-
-
-
-
-  
-
-    <footer>
-    <p>Thornberry Designs</p>
-    </footer>
-
-    
-         
-</body>
-
-</html>
