--- a/index.html
+++ b/index.html
@@ -7,3 +7,69 @@
     <title>The Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
+    <body>
+
+        <div class="section" id="section1">
+            <ul class="left-links">
+                <li><a href="#">Home</a></li>
+            </ul>
+            <ul class="right-links">
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact Us</a></li>
+              </ul>
+            <h1>This website is awesome</h1>
+            <p class="text1">This website has some subtext that goes here under the main title. It's smaller font and the colour is lower contrast</p>
+            <button>Sign Up</button>
+            <img src="" alt="Placeholder Image" class="image-placeholder">
+        </div>
+
+        <div class="section" id="section2">
+            <h2>Some random information</h2>
+            
+            <div class="container">
+                <div class="info">
+                    <img src="" alt="Placeholder Image" class="image-placeholder2">
+                  <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                    <img src="" alt="Placeholder Image" class="image-placeholder2">
+                  <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                    <img src="" alt="Placeholder Image" class="image-placeholder2">
+                  <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                    <img src="" alt="Placeholder Image" class="image-placeholder2">
+                  <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="section" id="section3">
+            <i>This is an inspiring quote, or a testimonal from a customer. Maybe it's just filliing up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</i>
+            <div>-Thor, God of Thunder</div>
+        </div>
+
+        <div class="section" id="section4">
+            <div class="bottom-box">
+                <p class="text2">Call to Action! It's time!</p>
+                <p class="text3">Sign up for our products by clickling that button right over there!</p>
+                <button>Sign Up</button>
+            </div>
+
+
+        </div>
+            
+
+
+
+
+
+
+    </body>
+
+</html>
