--- a/index.html
+++ b/index.html
@@ -30,15 +30,17 @@
                 
             </nav>
             
-            <div class="header=left">
+         <section class="container1">   
+            <div class="header-left">
             <h1>This website is awesome</h1>
             <p class="text1">This website has some subtext that goes here under the main title. It's smaller font and the colour is lower contrast</p>
-            <button>Sign Up</button>
+            <button id="button1">Sign Up</button>
             </div>
 
             <div class="header-right">
-            <img src="" alt="Placeholder Image" class="image-placeholder">
+            <p2 class="image-placeholder">PLACE HOLDER IMAGE</p2>
             </div>
+        </section>
 
         </header>
 
@@ -77,7 +79,7 @@
             <div class="bottom-box">
                 <p class="text2">Call to Action! It's time!</p>
                 <p class="text3">Sign up for our products by clickling that button right over there!</p>
-                <button>Sign Up</button>
+                <button id="button2">Sign Up</button>
             </div>
 
 
